Agregando el resto de actualizaciones de los serviios